--- a/2DGame/03-Contra/03-Contra/03-Contra.vcxproj
+++ b/2DGame/03-Contra/03-Contra/03-Contra.vcxproj
@@ -17,6 +17,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Kimkoh.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="myColor.h" />
     <ClInclude Include="Player.h" />
@@ -34,6 +35,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Kimkoh.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myColor.cpp" />
