--- a/2DGame/03-Contra/03-Contra/03-Contra.vcxproj.filters
+++ b/2DGame/03-Contra/03-Contra/03-Contra.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TileMap.cpp" />
+    <ClCompile Include="Kimkoh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimKeyframes.h" />
@@ -35,5 +36,6 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TileMap.h" />
+    <ClInclude Include="Kimkoh.h" />
   </ItemGroup>
 </Project>
